# collect

./: .gitignore  AISSTREAM_PARSE.md  AIS_NORMALIZE.md  AIS_PARSE.md  COLLECT_AISSTREAM.md  COLLECT_FILE.md  COLLECT_KAFKA.md  COLLECT_SOCKET.md  Cargo.toml  DOCKER_HEALTH_CHECK.md  Dockerfile  ENVIRONMENT_VARIABLES.md  NOMAD.md  PROFILING_GUIDE.md  QUICK_PROFILING.md  README.md  S3_INTEGRATION.md  TUI_ENHANCEMENTS.md  TUI_GUIDE.md  WEBSOCKET_AIS.md  WEBSOCKET_TROUBLESHOOTING.md  benchmark.sh  comprehensive_env_test.sh  demo_env_vars.sh  devenv.nix  docker-compose.yml  health-monitor.sh  memory_tracker.sh  monitor_resources.sh  refresh_binaries.sh  remaining.md  sample.csv  specifications.md  test_env_vars.sh  test_file_local.sh  test_missing_env.sh  test_socket_local.sh
crates/ais-normalize/: Cargo.toml
crates/ais-normalize/src/: dataset.rs  dedup.rs  main.rs  normalize.rs  output.rs  parse.rs  stats.rs  status.rs
crates/ais-parse/: Cargo.toml
crates/ais-parse/examples/: dump.rs
crates/ais-parse/src/: ais_bits.rs  decode.rs  main.rs  output.rs  output_iceberg.rs  stats.rs
crates/aisstream-parse/: Cargo.toml
crates/aisstream-parse/src/: ais_stream.rs  convert.rs  main.rs  output.rs  output_iceberg.rs  stats.rs
crates/collect-aisstream/: Cargo.toml
crates/collect-aisstream/src/: main.rs  tui.rs
crates/collect-core/: Cargo.toml
crates/collect-core/src/: ais_consolidate.rs  dataset.rs  lib.rs  metrics.rs  state.rs
crates/collect-core/src/iceberg/: mod.rs  table_schemas.rs
crates/collect-file/: Cargo.toml
crates/collect-file/src/: completion_manifest.rs  input.rs  main.rs  status.rs  tui.rs
crates/collect-kafka/: Cargo.toml  README.md
crates/collect-kafka/src/: main.rs  offsets.rs  tui.rs
crates/collect-kafka/tests/: ingest_harness.rs
crates/collect-maint/: Cargo.toml
crates/collect-maint/src/: commands.rs  main.rs  partition.rs  progress.rs  status.rs  storage.rs
crates/collect-socket/: Cargo.toml  build.rs
crates/collect-socket/src/: main.rs  tui.rs
crates/collect-tui/: Cargo.toml
crates/collect-tui/src/: lib.rs
nomad/: before_resource_usage.csv  collect-socket.nomad  collect_socket_resource_usage.csv  monitor_cgroup.py  nomad-ais-normalize-prod  nomad-ais-parse-prod  nomad-aisstream-parse-prod  nomad-collect-aisstream-prod  nomad-collect-duplicate-prod  nomad-collect-socket-prod  resource_usage.csv
nomad/scripts/: run-ais-normalize.sh  run-ais-parse.sh  run-aisstream-parse.sh  run-collect-aisstream.sh  run-collect-duplicate.sh  run-collect-socket.sh  run-tcp-ais-broker.sh
src/: main.rs  tui.rs
