[package]
name = "capture"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
parquet = { version = "53", features = ["arrow", "zstd"] }
arrow = "53"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-sdk-s3 = "1.0"
aws-config = { version = "1.0", features = ["rustls"] }
aws-credential-types = "1.0"
ratatui = "0.28"
crossterm = "0.28"
