[workspace]
members = [
    "crates/collect-core",
    "crates/collect-tui",
    "crates/collect-file",
    "crates/collect-socket",
    "crates/collect-maint",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
arrow = "53"
crossterm = "0.28"
aws-config = { version = "1.0", features = ["rustls"] }
aws-credential-types = "1.0"
aws-sdk-s3 = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
parquet = { version = "53", features = ["arrow", "zstd"] }
ratatui = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
walkdir = "2"
