[workspace]
members = [
    "crates/collect-core",
    "crates/collect-tui",
    "crates/collect-file",
    "crates/collect-socket",
    "crates/collect-kafka",
    "crates/collect-maint",
    "crates/ais-normalize",
    "crates/ais-parse",
    "crates/collect-aisstream",
    "crates/aisstream-parse",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
arrow = "53"
crossterm = "0.28"
aws-config = { version = "1.0", features = ["rustls"] }
aws-credential-types = "1.0"
aws-sdk-s3 = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
parquet = { version = "53", features = ["arrow", "zstd"] }
ratatui = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
walkdir = "2"
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tempfile = "3"
rlimit = "0.10"
# Pinned to the fork's last library-only commit (the 0.11.0 release line).
# Later fork commits fold a CLI, S3 I/O, and an iceberg 0.3 dependency into
# the library itself; iceberg pins parquet 52, which conflicts with the
# workspace's parquet 53 — and ais-parse provides that plumbing here instead.
nmea-parser = { git = "https://github.com/ScottSyms/nmea-parser", rev = "a4ddb297c1ce654d329f158c2a709d410d016849" }
