[package]
name = "ais-normalize"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
arrow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
futures-util.workspace = true
parquet.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
walkdir.workspace = true
collect-core = { path = "../collect-core" }

[[bin]]
name = "ais-normalize"
path = "src/main.rs"
