[package]
name = "ais-parse"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
arrow.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
fast_hilbert.workspace = true
h3o = "0.10"
nmea-parser.workspace = true
parquet.workspace = true
rlimit.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
walkdir.workspace = true
collect-core = { path = "../collect-core" }
rayon = "1"

[[bin]]
name = "ais-parse"
path = "src/main.rs"
