[package]
name = "collect-file"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
walkdir.workspace = true
async-compression = { version = "0.4", features = ["tokio", "gzip", "bzip2"] }
bytes = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

collect-core = { path = "../collect-core" }
collect-tui = { path = "../collect-tui" }

[dev-dependencies]
tempfile = "3"
