[package]
name = "collect-maint"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
arrow.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
walkdir.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tempfile = "3"

[dependencies.collect-core]
path = "../collect-core"
